2009-05-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components\TabLabel.cs: Use less spacing on the
	  tab label.

2009-05-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Commands\KeyBindingSet.cs: Use new
	  api for doing atomic renames.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components/WindowTransparencyDecorator.cs: Fix
	  typo - set property, not its backing field. Fixes window
	  remaining transparent after hiding.

2009-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components/WindowTransparencyDecorator.cs:
	  Better fix for the metacity bug.

2009-05-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components/WindowTransparencyDecorator.cs: Move
	  the workaround for "Bug 492264 - Intellisense menu locks on
	  top of the screen" to here so that it affects all users of
	  the decorator.

	* MonoDevelop.Components.Commands/KeyBindingManager.cs:
	  Reorder Mod5 setting in raw key mapping for consistency.

2009-04-30  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/CommandToolButton.cs: Use
	  display formatting for accelerator in tooltip.

2009-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components.Commands/CommandToolButton.cs:
	  Toolbar buttons show now the accel keys of the command.

2009-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Commands/CommandManager.cs: Don't
	  assign the method if there is already one assigned (maybe
	  from a subclass). Fixes regression for bug #320874 - Add
	  "Exclude from project" in contextual menu of a file in the
	  solution explorer.

2009-04-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs:
	  Refactor out GetRootKey method from MapRawKeys. It's
	  currently only used on the Mac platform but could be used by
	  others. Also cache the mappings.
